- Use dedicated build scripts per-arch
- Improve install documentation
- Add package table to README
- Document install test command from GIF in README